3dprint/apps-of-apps/ender/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
spec:
  template:
    spec:
      containers:
      - name: octoprint
        volumeMounts:
          - mountPath: /dev/ttyACM0
            name: ttyacm0
            readOnly: false
          - mountPath: /dev/video0
            name: video0
            readOnly: false
      volumes:
      - name: ttyacm0
        hostPath:
          path: /new/path/to/ttyACM0
      - name: video0
        hostPath:
          path: /new/path/to/video0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint-c-lan
spec:
  rules:
  - host: raspberrypi
    http:
      paths:
      - path: /ender
        pathType: ImplementationSpecific
        backend:
          service:
            name: octoprint-svc
            port:
              number: 80
